scrolling overflow effect added on bug-list page

--- a/assets/style/bug-list.css
+++ b/assets/style/bug-list.css
@@ -1,4 +1,6 @@
 .global-container {
+    height: 100vh;
+    position: relative;
     overflow: hidden;
 }
 
@@ -8,11 +10,16 @@
 }
 
 .bugs-list-section {
-    width: 100%;
+    height: 77%;
+    position: relative;
+    overflow-y: scroll;
 }
 
-.bugs-list {
-    width: 100%;
+.bugs-list-header {
+    position: sticky;
+    top: 0;
+    left: 0;
+    background-color: rgba(248,250,252);
 }
 
 .list-grid {
@@ -20,10 +27,6 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     border-bottom: 1px solid #c9ced4;
-}
-
-.bugs-list-header {
-    background-color: rgba(248,250,252);
 }
 
 .list-grid-item {
@@ -79,10 +82,15 @@
 }
 
 .pagination-container {
-    padding: 1.5rem 1rem;
+    padding: 1rem;
+    position: sticky;
+    bottom: 0;
+    left: 0;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: rgba(248,250,252);
+    border-top: 1px solid #c9ced4;
 }
 
 
@@ -108,6 +116,12 @@
 }
 
 @media screen and (max-width: 640px) {
+
+    .global-container {
+        height: unset;
+        overflow: unset;
+    }
+
     .main-title {
         font-size: 1.5rem;
     }
